app/test/test_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: www-page-deployment-test
spec:
 selector:
   matchLabels:
     deployment: www-page-deployment-test
 template:
   metadata:
     labels:
       deployment: www-page-deployment-test
   spec:
     containers:
     - name: www-page-test
       image: image-registry.openshift-image-registry.svc:5000/aaatest/www-page:1.0
       resources:
         requests:
           memory: "32Mi"
           cpu: "100m"
         limits:
           memory: "256Mi"
           cpu: "500m"
       ports:
       - containerPort: 8080
