app/test/test_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: www-page-test-route
  labels:
    app: aaa-application-test
    app.kubernetes.io/component: aaa-application-test
    app.kubernetes.io/instance: aaa-application-test
spec:
  to:  
    kind: Service
    name: aaa-application-test-service
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
